--- a/service-account.yaml
+++ b/service-account.yaml
@@ -1,29 +1,33 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: jenkins
+name: jenkins
 rules:
-  - apiGroups: [""]
-    resources: ["*"]
-    verbs: ["*"]
+- apiGroups: [""]
+resources: ["*"]
+verbs: ["*"]
+
+
 
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: jenkins
-  namespace: kubernetes
+name: jenkins
+namespace: jenkins
+
+
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: jenkins
+name: jenkins
 roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: jenkins
+apiGroup: rbac.authorization.k8s.io
+kind: ClusterRole
+name: jenkins
 subjects:
 - kind: ServiceAccount
-  name: jenkins
-  namespace: kubernetes
+name: jenkins
+namespace: jenkins
