--- a/service.yaml
+++ b/service.yaml
@@ -2,11 +2,17 @@
 apiVersion: v1
 kind: Service
 metadata: 
+  labels: 
+    run: glams
   name: glams
+  namespace: jenkins
 spec: 
   ports: 
     - 
+      name: http
       port: 5000
-      targetPort: 8080
+      protocol: TCP
+      targetPort: 80
   selector: 
-    app: glams
+    run: glams
+  type: NodePort
