--- a/ClusterRoleBinding.yaml
+++ b/ClusterRoleBinding.yaml
@@ -11,4 +11,4 @@ subjects:
   - 
     apiGroup: rbac.authorization.k8s.io
     kind: Group
-    name: "system:serviceaccounts:jenkins"
+    name: "system:serviceaccounts:default"
