--- a/service.yaml
+++ b/service.yaml
@@ -1,18 +1,15 @@
---- 
 apiVersion: v1
 kind: Service
-metadata: 
-  labels: 
-    run: glams
-  name: slave
-  namespace: jenkins
-spec: 
-  ports: 
-    - 
-      name: http
-      port: 5000
+metadata:
+  name: {{ include "test-app.fullname" . }}
+  labels:
+    {{- include "test-app.labels" . | nindent 4 }}
+spec:
+  type: {{ .Values.service.type }}
+  ports:
+    - port: {{ .Values.service.port }}
+      targetPort: http
       protocol: TCP
-      targetPort: 80
-  selector: 
-    run: glams
-  type: NodePort
+      name: http
+  selector:
+    {{- include "test-app.selectorLabels" . | nindent 4 }}
