--- a/service.yaml
+++ b/service.yaml
@@ -1,15 +1,18 @@
+--- 
 apiVersion: v1
 kind: Service
-metadata:
-  name: {{ include "test-app.fullname" . }}
-  labels:
-    {{- include "test-app.labels" . | nindent 4 }}
-spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
+metadata: 
+  labels: 
+    run: 
+  name: glams-9
+  namespace: jenkins
+spec: 
+  ports: 
+    - 
       name: http
-  selector:
-    {{- include "test-app.selectorLabels" . | nindent 4 }}
+      port: 5000
+      protocol: TCP
+      targetPort: 80
+  selector: 
+    run: glams
+  type: NodePort
